fix contrast error

--- a/index.css
+++ b/index.css
@@ -95,6 +95,7 @@ a:hover {
 .hero {
     display: flex;
     position: relative;
+    background-color: black;
 }  
 .heroimage {
     width: 100%;
